--- a/06 - Exploring_LLMs.ipynb
+++ b/06 - Exploring_LLMs.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/gitmystuff/AgenticAI/blob/main/06_Exploring_LLMs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/gitmystuff/AgenticAI/blob/main/06%20-%20Exploring_LLMs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -19,6 +19,43 @@
       "source": [
         "# Exploring LLMs"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ollama\n",
+        "\n",
+        "**Ollama** is an open-source tool that allows you to easily **download, run, and manage large language models (LLMs) locally on your own computer** (macOS, Windows, or Linux).\n",
+        "\n",
+        "Think of it as a simple command-line interface (and API) that acts like **Docker for LLMs**. It handles all the complex setup, including model quantization (making models smaller and faster), so you can quickly use popular open models like Llama, Mistral, and Gemma privately and without relying on cloud services.\n",
+        "\n",
+        "* https://ollama.com/\n"
+      ],
+      "metadata": {
+        "id": "11I0Tm2K96rJ"
+      },
+      "id": "11I0Tm2K96rJ"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## LMStudio\n",
+        "\n",
+        "**LM Studio** is a user-friendly, all-in-one desktop application (with a Graphical User Interface, or GUI) for running Large Language Models (LLMs) locally on your computer (Windows, macOS, or Linux).\n",
+        "\n",
+        "It simplifies the entire process by allowing you to:\n",
+        "1.  **Discover and download** pre-quantized, open-source models (like Llama, Mistral, and Gemma) directly from Hugging Face.\n",
+        "2.  **Chat and experiment** with these models in a dedicated, private chat interface.\n",
+        "3.  **Serve a local API** that is compatible with the OpenAI API format, making it easy to integrate the local LLMs into agentic frameworks like LangChain and CrewAI.\n",
+        "\n",
+        "It is particularly popular for its **ease of use** and strong focus on **data privacy**, as all processing happens entirely on your machine.\n",
+        "\n",
+        "* https://lmstudio.ai/"
+      ],
+      "metadata": {
+        "id": "IWdfa80Z-E5H"
+      },
+      "id": "IWdfa80Z-E5H"
     },
     {
       "cell_type": "code",
@@ -54,7 +91,7 @@
       "id": "8ea25618",
       "metadata": {
         "id": "8ea25618",
-        "outputId": "38fc831e-252e-4a24-c995-f722cdfbbca2"
+        "outputId": "6173313d-ce27-473e-8638-f885afc0b091"
       },
       "outputs": [
         {
@@ -159,7 +196,7 @@
       "id": "2b1471b7",
       "metadata": {
         "id": "2b1471b7",
-        "outputId": "387d895b-e52f-446e-88a2-843056e897bb"
+        "outputId": "36ee57e5-a5bc-49bb-afdb-09ead87c0122"
       },
       "outputs": [
         {
@@ -190,7 +227,7 @@
       "id": "f34e1900",
       "metadata": {
         "id": "f34e1900",
-        "outputId": "b2b66a18-7d4d-4db9-c482-a068bb263ded"
+        "outputId": "b47e0f43-855b-451a-e534-03d956e8fa4e"
       },
       "outputs": [
         {
@@ -225,7 +262,7 @@
       "id": "a1eb75eb",
       "metadata": {
         "id": "a1eb75eb",
-        "outputId": "4e0b5ca0-ef81-40d0-90ec-7e7d70c412fe"
+        "outputId": "89bdb96a-197d-4253-f92b-10c18ef9f842"
       },
       "outputs": [
         {
@@ -260,7 +297,7 @@
       "id": "df6d5757",
       "metadata": {
         "id": "df6d5757",
-        "outputId": "6a13a726-a4e7-49d4-e0c8-9e8b0bd1cd38"
+        "outputId": "48ead1ce-2f10-4a1a-a344-0e4a4b518dd0"
       },
       "outputs": [
         {
@@ -295,7 +332,7 @@
       "id": "4878e5d8",
       "metadata": {
         "id": "4878e5d8",
-        "outputId": "fb882a7a-edac-4fd6-b8e1-0a070e7b1f71"
+        "outputId": "33667149-086f-4bef-d37a-d32a2ea63362"
       },
       "outputs": [
         {
@@ -330,7 +367,7 @@
       "id": "8d741df6",
       "metadata": {
         "id": "8d741df6",
-        "outputId": "71c97353-f570-492d-8293-6dbb2ee35c06"
+        "outputId": "f3c443ca-cf34-45bd-a80c-eeca0eca2d53"
       },
       "outputs": [
         {
@@ -364,7 +401,7 @@
       "id": "bab68145",
       "metadata": {
         "id": "bab68145",
-        "outputId": "2012d03a-8f08-4906-eef9-827a233fc799"
+        "outputId": "885b22c6-49e4-4a93-f756-0b0c786db377"
       },
       "outputs": [
         {
@@ -424,7 +461,7 @@
       "id": "2a34705e",
       "metadata": {
         "id": "2a34705e",
-        "outputId": "85e92fdd-989b-4fce-b322-c443928ec15c"
+        "outputId": "5ca4f28c-5423-4b4c-dc69-798ab9f83b94"
       },
       "outputs": [
         {
@@ -498,7 +535,7 @@
       "id": "2ce18f30",
       "metadata": {
         "id": "2ce18f30",
-        "outputId": "1d76e5d4-777d-42b5-b96a-664ae0ada0f7"
+        "outputId": "2e6ac3a5-04ea-4cbd-ede0-56c33f000b62"
       },
       "outputs": [
         {
@@ -527,7 +564,7 @@
       "id": "2bfa3883",
       "metadata": {
         "id": "2bfa3883",
-        "outputId": "d8aa7450-12a4-43aa-a661-5251e6b7a69e"
+        "outputId": "20228cb7-0bab-4bd8-bc3c-0010cb19e454"
       },
       "outputs": [
         {
